ensure pre blocks scroll instead of wrapping. this does make some pages a little wider, unsure why

--- a/dev/less/markdown.less
+++ b/dev/less/markdown.less
@@ -58,9 +58,7 @@ pre {
     padding: 1rem;
     line-height: 1.5em;
     white-space: pre;
-    white-space: pre-wrap;
-    word-break: break-all;
-    word-wrap: break-word;
+    overflow-x: scroll;
 }
 
 pre code {
