--- a/static/css/main.css
+++ b/static/css/main.css
@@ -621,9 +621,7 @@ section.main .content .markdown pre {
   padding: 1rem;
   line-height: 1.5em;
   white-space: pre;
-  white-space: pre-wrap;
-  word-break: break-all;
-  word-wrap: break-word;
+  overflow-x: scroll;
 }
 section.main .content .markdown pre code {
   /* enclosed by 3 backticks (```) */
